Feature: NavBar Add: change item's name

--- a/src/assets/language/de.json
+++ b/src/assets/language/de.json
@@ -4,6 +4,7 @@
   "nav_translate": "Dokumentenübersetzung",
   "nav_cv": "Lebenslauf-Generator",
   "nav_dashboard": "Mein Bereich",
+  "nav_home": "Startseite",
 
   "footer": {
     "rights": "© 2025 ObjectifBildung. Alle Rechte vorbehalten.",
