--- a/src/assets/language/en.json
+++ b/src/assets/language/en.json
@@ -4,6 +4,7 @@
   "nav_translate": "Document Translation",
   "nav_cv": "CV Generator",
   "nav_dashboard": "My Dashboard",
+  "nav_home": "Home",
 
   "footer": {
     "rights": "© 2025 ObjectifBildung. All rights reserved.",
