--- a/src/assets/language/fr.json
+++ b/src/assets/language/fr.json
@@ -4,6 +4,7 @@
   "nav_translate": "Traduction de documents",
   "nav_cv": "Générateur de CV",
   "nav_dashboard": "Mon espace",
+  "nav_home": "Accueil",
 
   "footer": {
     "rights": "© 2025 ObjectifBildung. Tous droits réservés.",
